--- a/src/style/detailItem/detailItem.css
+++ b/src/style/detailItem/detailItem.css
@@ -11,6 +11,16 @@
   justify-content: center;
   line-height: 1;
 }
+@media screen and (max-width:500px) {
+  .btnStyle {
+    padding: 15px 0;
+    font-size: 13px;
+  }
+  .btnStyle svg {
+    width: 13px;
+    margin-right: 3px;
+  }
+}
 .btnStyle span {
   margin: 0 3px;
   font-weight: 800;
@@ -54,13 +64,31 @@
 .detailPage .detailItem {
   margin-top: 30px;
   display: flex;
+  flex-wrap: wrap;
   padding: 30px 0px;
   border-top: 1px solid rgb(63, 63, 63);
   height: 440px;
 }
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem {
+    height: auto;
+  }
+}
 .detailPage .detailItem .productSwiper {
   width: 40%;
   margin-right: 40px;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem .productSwiper {
+    width: 100%;
+    margin-right: 0;
+    height: 70vw;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem .productSwiper {
+    height: 85vw;
+  }
 }
 .detailPage .detailItem .productSwiper > div {
   width: 100%;
@@ -77,6 +105,13 @@
   background: rgba(33, 33, 33, 0.35);
   opacity: 1;
   display: none;
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem .productSwiper .swiper-button-next,
+  .detailPage .detailItem .productSwiper .swiper-button-prev {
+    width: 20px;
+    height: 20px;
+  }
 }
 .detailPage .detailItem .productSwiper .on .swiper-button-next,
 .detailPage .detailItem .productSwiper .on .swiper-button-prev {
@@ -97,6 +132,11 @@
 .detailPage .detailItem .productSwiper .swiper-pagination {
   top: unset;
   bottom: -25px;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem .productSwiper .swiper-pagination {
+    bottom: 5px;
+  }
 }
 .detailPage .detailItem .productSwiper .swiper-pagination .swiper-pagination-bullet {
   background: none;
@@ -129,16 +169,38 @@
   flex-direction: column;
   justify-content: space-between;
 }
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child {
+    padding: 0 3%;
+    box-sizing: border-box;
+  }
+}
 .detailPage .detailItem > div:last-child .mainInfo {
   padding-bottom: 30px;
   border-bottom: 1px solid rgb(238, 238, 238);
   width: 100%;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child .mainInfo {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .detailPage .detailItem > div:last-child .mainInfo .productName {
   font-size: 24px;
   margin-bottom: 25px;
   font-weight: 600;
   line-height: 1.4;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child .mainInfo .productName {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .mainInfo .productName {
+    font-size: 18px;
+  }
 }
 .detailPage .detailItem > div:last-child .mainInfo .price {
   display: flex;
@@ -158,12 +220,38 @@
   display: inline-block;
   height: 28px;
 }
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child .mainInfo .price {
+    margin: 10px 0 25px;
+    gap: 5px;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .mainInfo .price {
+    margin: 7px 0 15px;
+    align-items: center;
+  }
+  .detailPage .detailItem > div:last-child .mainInfo .price p {
+    font-size: 20px;
+  }
+  .detailPage .detailItem > div:last-child .mainInfo .price span {
+    font-size: 20px;
+  }
+  .detailPage .detailItem > div:last-child .mainInfo .price .thunderImg {
+    height: 16px;
+  }
+}
 .detailPage .detailItem > div:last-child .subInfo .infoIcon {
   height: 30px;
   margin-top: 15px;
   margin-bottom: 25px;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .subInfo .infoIcon {
+    margin: 10px 0 15px;
+  }
 }
 .detailPage .detailItem > div:last-child .subInfo .infoIcon div {
   height: 100%;
@@ -179,6 +267,14 @@
 }
 .detailPage .detailItem > div:last-child .subInfo .infoIcon div p svg {
   margin-right: 5px;
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .subInfo .infoIcon div p {
+    font-size: 13px;
+  }
+  .detailPage .detailItem > div:last-child .subInfo .infoIcon div p svg {
+    width: 15px;
+  }
 }
 .detailPage .detailItem > div:last-child .subInfo .infoIcon div p::after {
   content: "";
@@ -197,6 +293,14 @@
   display: flex;
   align-items: center;
 }
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .subInfo button {
+    font-size: 13px;
+  }
+  .detailPage .detailItem > div:last-child .subInfo button svg {
+    width: 15px;
+  }
+}
 .detailPage .detailItem > div:last-child .subInfo img {
   width: 21px;
   margin-right: 5px;
@@ -206,6 +310,17 @@
   display: flex;
   margin-bottom: 17px;
   font-size: 14px;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child .productCondition div {
+    margin-bottom: 14px;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailItem > div:last-child .productCondition div {
+    font-size: 12px;
+    margin-bottom: 12px;
+  }
 }
 .detailPage .detailItem > div:last-child .productCondition div p {
   position: relative;
@@ -233,6 +348,11 @@
   width: 15px;
   -o-object-fit: contain;
      object-fit: contain;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailItem > div:last-child .btnIcon {
+    margin-top: 15px;
+  }
 }
 .detailPage .alreadySell p {
   padding: 28px 0px 20px;
@@ -289,10 +409,23 @@
   display: flex;
   justify-content: flex-end;
 }
+@media screen and (max-width:500px) {
+  .detailPage .contentInfo .contentInfoHeader {
+    padding: 0 3%;
+    box-sizing: border-box;
+  }
+}
 .detailPage .contentInfo .contentInfoHeader div {
   width: 25px;
   height: 25px;
   margin: 10px 5px;
+}
+@media screen and (max-width:500px) {
+  .detailPage .contentInfo .contentInfoHeader div {
+    width: 15px;
+    height: 15px;
+    margin: 7px 2px;
+  }
 }
 .detailPage .contentInfo .contentInfoHeader div img {
   width: 100%;
@@ -320,11 +453,27 @@
   justify-content: space-between;
   margin: 30px 0;
 }
+@media screen and (max-width:1000px) {
+  .detailPage .otherProduct {
+    padding: 0 3%;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .otherProduct p {
+    font-size: 14px;
+  }
+}
 .detailPage .otherProduct div {
   display: flex;
   align-items: center;
   font-size: 18px;
   font-weight: 600;
+}
+@media screen and (max-width:500px) {
+  .detailPage .otherProduct div {
+    font-size: 14px;
+  }
 }
 .detailPage .otherProduct div span {
   position: relative;
@@ -340,6 +489,13 @@
   font-weight: 400;
   font-size: 16px;
 }
+@media screen and (max-width:500px) {
+  .detailPage .otherProduct div span {
+    top: 1px;
+    padding: 0 4px;
+    font-size: 12px;
+  }
+}
 .detailPage .otherProduct div span img {
   display: inline-block;
   margin-left: 1px;
@@ -347,6 +503,12 @@
 .detailPage .swiperContainer {
   width: 100%;
   margin-bottom: 50px;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .swiperContainer {
+    padding: 0 5%;
+    box-sizing: border-box;
+  }
 }
 .detailPage .swiperContainer > div {
   height: 100%;
@@ -356,6 +518,16 @@
   height: 140px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .swiperContainer > div .swiper-slide .detailItemImg img {
+    height: 16vw;
+  }
+}
+@media screen and (max-width:500px) {
+  .detailPage .swiperContainer > div .swiper-slide .detailItemImg img {
+    height: 23vw;
+  }
 }
 .detailPage .swiperContainer > div .swiper-slide .slideProduct {
   display: block;
@@ -383,6 +555,13 @@
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width:500px) {
+  .detailPage .swiper-button-next,
+  .detailPage .swiper-button-prev {
+    width: 25px;
+    height: 25px;
+  }
+}
 .detailPage .swiper-button-next {
   right: 0px;
 }
@@ -393,6 +572,12 @@
   width: 12px;
   height: 12px;
 }
+@media screen and (max-width:500px) {
+  .detailPage .swiper-button-next::after {
+    width: 9px;
+    height: 9px;
+  }
+}
 .detailPage .swiper-button-prev {
   left: 0;
 }
@@ -402,6 +587,12 @@
   background-size: contain;
   width: 12px;
   height: 12px;
+}
+@media screen and (max-width:500px) {
+  .detailPage .swiper-button-prev::after {
+    width: 9px;
+    height: 9px;
+  }
 }
 .detailPage .detailSecond {
   display: flex;
@@ -415,11 +606,21 @@
   padding: 48px 0px 16px;
   border-bottom: 1px solid rgb(238, 238, 238);
 }
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond > div h3 {
+    margin-bottom: 15px;
+  }
+}
 .detailPage .detailSecond > div:first-child {
   width: 70%;
   padding-right: 30px;
   box-sizing: border-box;
   border-right: 1px solid rgb(238, 238, 238);
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond > div:first-child {
+    border-right: none;
+  }
 }
 .detailPage .detailSecond > div:first-child p {
   white-space: pre-wrap;
@@ -458,11 +659,19 @@
   text-align: center;
   word-break: keep-all;
 }
+@media screen and (max-width:500px) {
+  .detailPage .detailSecond > div:first-child .infoList li span {
+    font-size: 11px;
+    padding: 0 10px;
+    line-height: 1.2;
+  }
+}
 .detailPage .detailSecond > div:first-child .infoList li:last-child {
   border: none;
 }
 .detailPage .detailSecond > div:first-child .similarProduct {
   display: flex;
+  flex-wrap: wrap;
   -moz-column-gap: 16px;
        column-gap: 16px;
   width: 100%;
@@ -515,10 +724,31 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+@media screen and (max-width:500px) {
+  .detailPage .detailSecond > div:first-child .similarProduct li > div p:nth-child(2) {
+    font-size: 12px;
+  }
+}
 .detailPage .detailSecond > div:first-child .similarProduct li > div span {
   font-size: 12px;
   color: rgb(178, 178, 178);
   display: block;
+}
+@media screen and (max-width:500px) {
+  .detailPage .detailSecond > div:first-child .similarProduct li > div span {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond > div:first-child .similarProduct {
+    flex-wrap: wrap;
+    border: none;
+    padding: 0;
+  }
+  .detailPage .detailSecond > div:first-child .similarProduct li {
+    width: 100%;
+    margin-bottom: 10px;
+  }
 }
 .detailPage .detailSecond > div:last-child {
   flex: 1;
@@ -604,7 +834,7 @@
   gap: 3px;
 }
 .detailPage .detailSecond > div:last-child .photoList li {
-  width: calc(49% - 3px);
+  width: 48%;
   margin: 0 0.5%;
   box-sizing: border-box;
 }
@@ -619,6 +849,11 @@
   -o-object-fit: cover;
      object-fit: cover;
 }
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond > div:last-child .photoList li a img {
+    height: 30vw;
+  }
+}
 .detailPage .detailSecond > div:last-child .photoList li a p {
   position: absolute;
   bottom: 0px;
@@ -631,6 +866,12 @@
   color: rgb(255, 255, 255);
   font-size: 12px;
   background: rgba(0, 0, 0, 0.25);
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond > div:last-child .photoList li a p {
+    font-size: 14px;
+    height: 36px;
+  }
 }
 .detailPage .detailSecond > div:last-child .photoList li a p span {
   font-weight: 600;
@@ -664,6 +905,18 @@
 }
 .detailPage .detailSecond > div:last-child .btnIcon > div span {
   font-size: 14px;
+}
+@media screen and (max-width:1000px) {
+  .detailPage .detailSecond {
+    flex-wrap: wrap;
+    padding: 0 5%;
+    box-sizing: border-box;
+  }
+  .detailPage .detailSecond > div {
+    width: 100% !important;
+    margin-right: 0;
+    border-right: none;
+  }
 }
 .detailPage .callBox {
   margin: 40px 0px 40px;
