--- a/src/style/detailItem/detailItem.css
+++ b/src/style/detailItem/detailItem.css
@@ -77,6 +77,7 @@
 .detailPage .detailItem .productSwiper {
   width: 40%;
   margin-right: 40px;
+  height: 100%;
 }
 @media screen and (max-width:1000px) {
   .detailPage .detailItem .productSwiper {
@@ -671,7 +672,6 @@
 }
 .detailPage .detailSecond > div:first-child .similarProduct {
   display: flex;
-  flex-wrap: wrap;
   -moz-column-gap: 16px;
        column-gap: 16px;
   width: 100%;
