--- a/src/style/detailItem/detailItem.scss
+++ b/src/style/detailItem/detailItem.scss
@@ -93,6 +93,7 @@
     .productSwiper {
       width: 40%;
       margin-right: 40px;
+      height: 100%;
 
       @media #{m.$max-lg} {
         width: 100%;
@@ -800,7 +801,6 @@
 
       .similarProduct {
         display: flex;
-        flex-wrap: wrap;
         column-gap: 16px;
         width: 100%;
         padding: 24px;
