--- a/src/style/Product/product.css
+++ b/src/style/Product/product.css
@@ -1,7 +1,11 @@
-.product {
-  display: grid;
-  margin: 0 auto;
-  grid-template-columns: repeat(5,1fr);
+.product{
+  text-align: center;
+}
+.productlist {
+  width: 200px;
+  margin-top: 10px;
+  margin-right: 12px;
+  float: left;
 }
 
 .pro {
@@ -9,19 +13,19 @@
   background-color: #fff;
   border: 1px solid #ddd;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  margin-top: 10px;
-  width: 210px;
+  width: 100%;
   text-align: left;
   overflow: hidden;
 }
 
 .pro_img {
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
+
 .pro_img img{
   width: 100%;
-  height: 220px;
+  height: 200px;
 }
 
 .pro_name {
@@ -67,3 +71,26 @@
   height: 30px;
 }
 
+.pro.sellClass {
+  filter: brightness(70%);
+}
+
+.pro_status {
+  font-size: 14px;
+  color: red;
+  font-weight: bold;
+}
+
+.sell{
+  position: absolute;
+  border: 3.5px solid  red;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 1.3rem;
+  line-height: 100px;
+}
