--- a/src/style/profile/profilenav.css
+++ b/src/style/profile/profilenav.css
@@ -1,21 +1,27 @@
 .profile_navs{
-  width: 1200px;
+  width: 100%;
   height: 50px;
-  margin: 10px auto;
   display: flex;
-  justify-content: center;
-}
-
-.profile_nav:hover{
-  color: red;
-}
-
-.profile_nav {
-  border: 1px solid red;
-  text-decoration: none;
-  width:230px;
-  padding:15px 0px;
   text-align: center;
-  font-weight: bold;
-  float:left;
+  line-height: 50px;
+}
+
+.profile_nav{
+  width: 19.6%;
+  height: 100%;
+  border-right: 0.5px solid #ccc;
+  border-top: 0.5px solid #ccc;
+  border-left: 0.5px solid #ccc;
+  border-bottom: 0.5px solid black;
+  font-size: 0.8rem;
+  color: #ccc;
+}
+
+.profile_nav.active {
+  color: black;
+  border-right: 0.5px solid black;
+  border-top: 0.5px solid black;
+  border-left: 0.5px solid black;
+  border-bottom: none;
+  transition: 0.1s ease;
 }
