header, loginpopup, logoutpopup, category, headersearch from yang2
header, loginpopup, logoutpopup, category,
headersearch, sessionstorage 수정 및 추가

2023-12-08

--- a/src/style/header/category.scss
+++ b/src/style/header/category.scss
@@ -1,6 +1,50 @@
 .Category {
   position: absolute;
-  top:72px;
+  top:71px;
   left:0;
-  border:1px solid orange;
+  border:1px solid #ddd;
+  color:#000;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #fff;
+  cursor: auto;
+
+  .maincategoryname {
+    font-weight: bold;
+    width: 250px;
+
+    .categoryname {
+      border-bottom: 1px solid #ddd;
+      padding: 14px 26px;
+      position: relative;
+
+      .categoryarrow {
+        position: absolute;
+        right:30px;
+        color:red;
+      }
+    }
+
+    .maincategorylist {
+      padding: 10px 0;
+      font-weight: 500;
+      
+      .categorylist {
+        padding: 16px 0;
+        cursor: pointer;
+
+        p {
+          padding-left: 26px;
+        }
+
+        .middlecategoryname {
+          margin-left: 251px;
+
+          p {
+            padding: 10px 0;
+          }
+        }
+      }
+    }
+  }
 }
