--- a/src/style/header/Category.css
+++ b/src/style/header/Category.css
@@ -1,6 +1,42 @@
 .Category {
   position: absolute;
-  top: 72px;
+  top: 71px;
   left: 0;
-  border: 1px solid orange;
-}/*# sourceMappingURL=Category.css.map */
+  border: 1px solid #ddd;
+  color: #000;
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #fff;
+  cursor: auto;
+}
+.Category .maincategoryname {
+  font-weight: bold;
+  width: 250px;
+}
+.Category .maincategoryname .categoryname {
+  border-bottom: 1px solid #ddd;
+  padding: 14px 26px;
+  position: relative;
+}
+.Category .maincategoryname .categoryname .categoryarrow {
+  position: absolute;
+  right: 30px;
+  color: red;
+}
+.Category .maincategoryname .maincategorylist {
+  padding: 10px 0;
+  font-weight: 500;
+}
+.Category .maincategoryname .maincategorylist .categorylist {
+  padding: 16px 0;
+  cursor: pointer;
+}
+.Category .maincategoryname .maincategorylist .categorylist p {
+  padding-left: 26px;
+}
+.Category .maincategoryname .maincategorylist .categorylist .middlecategoryname {
+  margin-left: 251px;
+}
+.Category .maincategoryname .maincategorylist .categorylist .middlecategoryname p {
+  padding: 10px 0;
+}/*# sourceMappingURL=category.css.map */
