headersearch, category, qr, login, logout from yang2
headerSearch jsx 온포커싱으로 생성 및 삭제,
category json 일부 수정했다고 되돌림,
category jsx 온마우스엔터, 리브로 카테고리메뉴들 json 데이터 가져오기,
팝업창들 너비값 퍼센트에서 px 로 조정

2023-12-11

--- a/src/style/header/Category.css
+++ b/src/style/header/Category.css
@@ -11,12 +11,15 @@
 }
 .Category .maincategoryname {
   font-weight: bold;
-  width: 250px;
+  position: relative;
+  height: 600px;
 }
 .Category .maincategoryname .categoryname {
   border-bottom: 1px solid #ddd;
   padding: 14px 26px;
   position: relative;
+  width: 250px;
+  box-sizing: border-box;
 }
 .Category .maincategoryname .categoryname .categoryarrow {
   position: absolute;
@@ -26,6 +29,7 @@
 .Category .maincategoryname .maincategorylist {
   padding: 10px 0;
   font-weight: 500;
+  width: 250px;
 }
 .Category .maincategoryname .maincategorylist .categorylist {
   padding: 16px 0;
@@ -34,9 +38,35 @@
 .Category .maincategoryname .maincategorylist .categorylist p {
   padding-left: 26px;
 }
-.Category .maincategoryname .maincategorylist .categorylist .middlecategoryname {
-  margin-left: 251px;
+.Category .middlecategoryname {
+  font-weight: bold;
+  width: 250px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  left: 251px;
+  background-color: #fff;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
-.Category .maincategoryname .maincategorylist .categorylist .middlecategoryname p {
+.Category .middlecategoryname .middlename {
+  border-bottom: 1px solid #ddd;
+  padding: 14px 26px;
+  position: relative;
+}
+.Category .middlecategoryname .middlename .categoryarrow {
+  position: absolute;
+  right: 30px;
+  color: red;
+}
+.Category .middlecategoryname .middlecategorylist {
   padding: 10px 0;
+  font-weight: 500;
+}
+.Category .middlecategoryname .middlecategorylist .middlelist {
+  padding: 16px 0;
+  cursor: pointer;
+}
+.Category .middlecategoryname .middlecategorylist .middlelist p {
+  padding-left: 26px;
 }/*# sourceMappingURL=category.css.map */
