--- a/src/style/popup/loginpopup.css
+++ b/src/style/popup/loginpopup.css
@@ -10,12 +10,12 @@
 }
 
 .loginpopup {
-  width: 25%;
-  height: 25%;
+  width: 400px;
+  height: 400px;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -100%);
+  transform: translate(-50%, -50%);
   z-index: 110;
   display: none;
 }
