--- a/src/style/chat/chat.css
+++ b/src/style/chat/chat.css
@@ -57,7 +57,7 @@
   position: relative;
   width: 60px;
   height: 60px;
-  background-color: #CCC;
+  background-color: #ccc;
   border-radius: 50%;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList li .chatList_inner_chatRoomLink_img img {
@@ -104,7 +104,7 @@
   text-align: center;
   line-height: 35px;
   transform: translate(10px, 15px);
-  background-color: #F70000;
+  background-color: #f70000;
   border-radius: 50%;
   color: white;
 }
@@ -114,6 +114,49 @@
 .chatList .chatList_right {
   border-left: 1px solid #ccc;
   height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.chatList .chatList_right .purchaseModal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: flex-end;
+  z-index: -1;
+  transition: all 0.5s ease-out;
+  opacity: 0;
+}
+.chatList .chatList_right .purchaseModal.active {
+  top: -50%;
+  opacity: 1;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.chatList .chatList_right .purchaseModal > div {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  background-color: white;
+  border-radius: 30px 30px 0 0;
+  font-weight: 700;
+  font-size: 2em;
+}
+.chatList .chatList_right .purchaseModal > div div:first-of-type {
+  padding-bottom: 30px;
+}
+.chatList .chatList_right .purchaseModal > div div:last-of-type button {
+  display: block;
+  width: 90%;
+  padding: 10px 20px;
+  margin: 10px auto;
+  border-radius: 10px;
+  background-color: #f70000;
+  color: white;
+  font-size: 0.7em;
 }
 .chatList .chatList_right .chatRoom_header {
   border-bottom: 1px solid #ccc;
@@ -134,8 +177,45 @@
   height: 30px;
   padding: 5px;
 }
+.chatList .chatList_right .purchase {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  align-items: center;
+}
+.chatList .chatList_right .purchase .productlist {
+  margin: -1px -1px 0 0;
+  width: 400px;
+  flex: 1;
+  float: none;
+}
+.chatList .chatList_right .purchase .productlist .pro {
+  display: flex;
+  border: none;
+  background-color: transparent;
+  box-shadow: none;
+}
+.chatList .chatList_right .purchase .productlist .pro .pro_status {
+  width: 80px;
+  height: 80px;
+}
+.chatList .chatList_right .purchase .productlist .pro .pro_status .pro_img {
+  display: block;
+  width: 80px;
+  height: 80px;
+}
+.chatList .chatList_right .purchase .productlist .pro .pro_status .pro_img img {
+  width: 100%;
+  height: 100%;
+}
+.chatList .chatList_right .purchase button {
+  color: white;
+  background-color: #f70000;
+  padding: 10px;
+  border-radius: 5px;
+}
 .chatList .chatList_right .chatLog {
-  height: 620px;
+  height: 520px;
   overflow-y: scroll;
 }
 .chatList .chatList_right .chatLog li .empty-chat {
